# hermes-kimi-plugin

./: .gitignore  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
kimi/: __init__.py  kimi_adapter.py  plugin.yaml
kimi/_compat/: __init__.py  registry.py
tests/: test_kimi.py
